test/langtools/tools/javac/valhalla/lworld-values/ProjectionInstantiationTest.out
ProjectionInstantiationTest.java:12:9: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:13:9: compiler.err.projection.cant.be.instantiated
2 errors
